--- a/PSA_GIT_TEST/notebook_app.ipynb
+++ b/PSA_GIT_TEST/notebook_app.ipynb
@@ -40,6 +40,17 @@
    "source": "# Then, we can use the python name to turn cell2 into a Pandas dataframe\nmy_df = cell2.to_pandas()\n\n# Chart the data\nst.subheader(\"Chance of SNOW ❄️\")\nst.line_chart(my_df, x='SNOWDAY', y='CHANCE_OF_SNOW')\n\n# Give it a go!\nst.subheader(\"Try it out yourself and show off your skills 🥇\")",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "id": "0534625e-759c-4317-8b4d-59c6a1d5c37a",
+   "metadata": {
+    "language": "sql",
+    "name": "cell4"
+   },
+   "outputs": [],
+   "source": "SHOW GIT REPOSITORIES;",
+   "execution_count": null
   }
  ]
 }
